<?xml version="1.0"?>
<package>
  <name>dwl_rviz_plugin</name>
  <version>0.0.2</version>
  <description>
    Visualization plugins of whole-body state, trajectories, terrain map, etc.
  </description>


  <author email="carlos.mastalli@laas.fr">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@laas.fr">Carlos Mastalli</maintainer>
  <license> BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>dwl</build_depend>
  <build_depend>dwl_terrain</build_depend>
  <build_depend>dwl_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>dwl</run_depend>
  <run_depend>dwl_terrain</run_depend>
  <run_depend>dwl_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
